--- a/proyecto_laravel/proyecto_artist4all/.env
+++ b/proyecto_laravel/proyecto_artist4all/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=laravel_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
