--- a/artist4all_angular/package.json
+++ b/artist4all_angular/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "moment": "^2.29.1",
     "ngx-build-plus": "^11.0.0",
     "ngx-spinner": "^11.0.1",
     "rxjs": "~6.6.0",
