--- a/artist4all_angular/package.json
+++ b/artist4all_angular/package.json
@@ -12,13 +12,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.7",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/material": "^11.2.8",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "material-design-icons-iconfont": "^6.1.0",
     "moment": "^2.29.1",
     "ngx-build-plus": "^11.0.0",
     "ngx-spinner": "^11.0.1",
