--- a/artist4all_php/app/composer.json
+++ b/artist4all_php/app/composer.json
@@ -4,8 +4,8 @@
   "require": {
     "monolog/monolog": ">=2.0.0 <3.0.0",
     "slim/slim": "4.*",
-    "slim/psr7": "*",
-    "slim/http": "*"
+    "slim/psr7": "^1.3",
+    "slim/http": "^1.2"
   },
   "autoload": {
       "psr-4": { 
@@ -13,4 +13,3 @@
       }
   }
 }
-
