--- a/artist4all_php/app/composer.json
+++ b/artist4all_php/app/composer.json
@@ -5,7 +5,8 @@
     "monolog/monolog": ">=2.0.0 <3.0.0",
     "slim/slim": "4.*",
     "slim/psr7": "^1.3",
-    "slim/http": "^1.2"
+    "slim/http": "^1.2",
+    "tuupola/cors-middleware": "^1.2"
   },
   "autoload": {
       "psr-4": { 
