cambiada la zona horaria del contenedor del php de UTC a la de Madrid (si no, 2 horas atrasado en el insert de fechas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - 81:80
     links: 
       - artist4all_db
+    environment:
+      - "TZ=Europe/Madrid"
       
   artist4all_angular:
     image: nginx:latest
